--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProdutosFacebook
 excludes=
 file.reference.json-simple-1.1.1.jar=D:\\Solon Diego\\Documents\\NetBeansProjects\\API Rest Precode 2\\lib\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar-1=C:\\Users\\lojao\\Downloads\\json-simple-1.1.1.jar
 file.reference.jsoup-1.13.1.jar=D:\\Solon Diego\\Downloads\\jsoup-1.13.1.jar
+file.reference.jsoup-1.13.1.jar-1=C:\\Users\\lojao\\Downloads\\jsoup-1.13.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.jsoup-1.13.1.jar}
+    ${file.reference.jsoup-1.13.1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar-1}:\
+    ${file.reference.jsoup-1.13.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
