--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\lojao\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+file.reference.json-simple-1.1.1.jar=C:\\Users\\Solon Diego\\Downloads\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar-1=C:\\Users\\Solon Diego\\Downloads\\json-simple-1.1.1.jar
+file.reference.jsoup-1.13.1.jar=C:\\Users\\Solon Diego\\Downloads\\jsoup-1.13.1.jar
+file.reference.jsoup-1.13.1.jar-1=C:\\Users\\Solon Diego\\Downloads\\jsoup-1.13.1.jar
+user.properties.file=C:\\Users\\Solon Diego\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
